--- a/PageChiffre.html
+++ b/PageChiffre.html
@@ -21,7 +21,7 @@
        
         <div id="Navigation">
                 <a href="index.html">Accueil</a>
-                <a href="PagePresentation.html">Présentation d'owen</a>
+                <a href="PagePresentation.html">Présentation</a>
                 <a href="PageEnCeMoment.html">En ce moment</a>
                 <a href="PageEconomie.html">Economie</a>
                 <a id="Pageactuelle" href="#">Chiffres</a>
