--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div>
                 <img src="Logo.png" alt="Logo" width="100" height="80">
                 <br>
-                &copy; 2024 Oscar DUFOSSEZ
+                &copy; 2024 Oscar DUFOSSEZ_
             </div>
             
             <div>
