--- a/PageEconomie.html
+++ b/PageEconomie.html
@@ -168,7 +168,7 @@
                 <div>
                     <img src="Logo.png" alt="Logo" width="100" height="80">
                     <br>
-                    &copy; 2024 Eloi DUPASQUIER
+                    &copy; 2024 Eloi DUPASQUIER_
                 </div>
                 
                 <div>
