--- a/PageEnCeMoment.html
+++ b/PageEnCeMoment.html
@@ -198,7 +198,7 @@
                 <div>
                     <img src="Logo.png" alt="Logo" width="100" height="80">
                     <br>
-                    &copy; 2024 Mathias DUMAIN
+                    &copy; 2024 Mathias DUMAIN__
                 </div>
                 
                 <div>
