--- a/PagePresentation.html
+++ b/PagePresentation.html
@@ -97,7 +97,7 @@
             <div>
                 <img src="Logo.png" alt="Logo" width="100" height="80">
                 <br>
-                &copy; 2024 Owen Hetru
+                &copy; 2024 Owen Hetru_
             </div>
             
             <div>
