--- a/PageChiffre.html
+++ b/PageChiffre.html
@@ -131,7 +131,7 @@
                 <div>
                     <img src="Logo.png" alt="Logo" width="100" height="80">
                     <br>
-                    &copy; 2024 Luca Dussol
+                    &copy; 2024 Luca Dussol_
                 </div>
                 
                 <div>
