--- a/index.html
+++ b/index.html
@@ -2,38 +2,56 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Réinscription Luca Dussol</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Réinscription - Luca Dussol</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background: #f2f2f2;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
+            font-family: 'Inter', sans-serif;
+            background: #f9f9f9;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
         }
-        .container {
-            background: white;
-            padding: 40px 60px;
+
+        .card {
+            background-color: #ffffff;
+            padding: 40px 50px;
             border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
             text-align: center;
+            max-width: 500px;
+            width: 90%;
         }
-        h1 {
+
+        .card h1 {
+            margin-bottom: 10px;
+            font-size: 2em;
             color: #1a1a1a;
         }
-        p {
+
+        .card h2 {
+            margin-bottom: 20px;
             font-size: 1.2em;
-            color: #555;
+            color: #4a4a4a;
+            font-weight: 400;
+        }
+
+        .footer {
+            margin-top: 30px;
+            font-size: 0.9em;
+            color: #888;
         }
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="card">
         <h1>Luca Dussol</h1>
-        <p>Réinscrit à l'IUT de Belfort</p>
-        <p>Année universitaire 2025-2026</p>
+        <h2>Réinscrit à l'IUT de Belfort</h2>
+        <p>Année universitaire 2025 – 2026</p>
+        <div class="footer">Document officiel – IUT Nord Franche-Comté</div>
     </div>
 </body>
 </html>
