--- a/index.html
+++ b/index.html
@@ -1,57 +1,81 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Réinscription - Luca Dussol</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Inter', sans-serif;
-            background: #f9f9f9;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        .card {
-            background-color: #ffffff;
-            padding: 40px 50px;
-            border-radius: 12px;
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            max-width: 500px;
-            width: 90%;
-        }
-
-        .card h1 {
-            margin-bottom: 10px;
-            font-size: 2em;
-            color: #1a1a1a;
-        }
-
-        .card h2 {
-            margin-bottom: 20px;
-            font-size: 1.2em;
-            color: #4a4a4a;
-            font-weight: 400;
-        }
-
-        .footer {
-            margin-top: 30px;
-            font-size: 0.9em;
-            color: #888;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device‑width, initial‑scale=1.0">
+  <title>Luca Dussol – Réinscription IUT Belfort 2025‑2026</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: #f4f4f6;
+      display: flex;
+      justify-content: center;
+      padding: 40px;
+    }
+    .card {
+      background: #fff;
+      padding: 30px 40px;
+      border-radius: 10px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      max-width: 600px;
+      width: 100%;
+      text-align: center;
+    }
+    .logo {
+      max-height: 80px;
+      margin-bottom: 20px;
+    }
+    h1 {
+      font-size: 2.2em;
+      margin: 0 0 5px;
+      color: #222;
+    }
+    h2 {
+      font-size: 1em;
+      color: #555;
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+    th, td {
+      padding: 10px;
+      text-align: left;
+      border-bottom: 1px solid #eee;
+    }
+    th {
+      background: #fafafa;
+      font-weight: 600;
+    }
+    .footer {
+      margin-top: 25px;
+      font-size: 0.9em;
+      color: #888;
+    }
+  </style>
 </head>
 <body>
-    <div class="card">
-        <h1>Luca Dussol</h1>
-        <h2>Réinscrit à l'IUT de Belfort</h2>
-        <p>Année universitaire 2025 – 2026</p>
-        <div class="footer">Document officiel – IUT Nord Franche-Comté</div>
-    </div>
+  <div class="card">
+    <img src="iut-logo.png" alt="Logo IUT Belfort-Montbéliard" class="logo">
+    <h1>Luca Dussol</h1>
+    <h2>Réinscrit à l'IUT de Belfort – Année universitaire 2025‑2026</h2>
+
+    <table>
+      <tr><th>Unité d'Enseignement (UE)</th><th>Note</th></tr>
+      <tr><td>UE1 Réaliser un développement d'applications</td><td>13.56</td></tr>
+      <tr><td>UE2 Optimiser des applications</td><td>12.77</td></tr>
+      <tr><td>UE3 Administrer des systèmes informatiques communicants complexes</td><td>13.46</td></tr>
+      <tr><td>UE4 Conduire un projet</td><td>11.64</td></tr>
+      <tr><td>UE5 Gérer des données de l'information</td><td>12.35</td></tr>
+      <tr><td>UE6 Collaborer au sein d'une équipe informatique</td><td>10.85</td></tr>
+    </table>
+
+    <div class="footer">Document officiel – IUT Nord Franche‑Comté</div>
+  </div>
 </body>
 </html>
