--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device‑width, initial‑scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Luca Dussol – Réinscription IUT Belfort 2025‑2026</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
@@ -38,6 +38,11 @@
       margin-top: 0;
       margin-bottom: 20px;
     }
+    .info {
+      font-size: 1em;
+      color: #333;
+      margin-bottom: 15px;
+    }
     table {
       width: 100%;
       border-collapse: collapse;
@@ -52,6 +57,12 @@
       background: #fafafa;
       font-weight: 600;
     }
+    .confirmation {
+      margin-top: 30px;
+      font-size: 1.1em;
+      font-weight: 600;
+      color: #2a7c2a;
+    }
     .footer {
       margin-top: 25px;
       font-size: 0.9em;
@@ -65,6 +76,9 @@
     <h1>Luca Dussol</h1>
     <h2>Réinscrit à l'IUT de Belfort – Année universitaire 2025‑2026</h2>
 
+    <div class="info">Date de naissance : <strong>28/03/2006</strong></div>
+    <div class="info">BUT 1<sup>re</sup> année 2024/2025 – Semestres S1 et S2</div>
+
     <table>
       <tr><th>Unité d'Enseignement (UE)</th><th>Note</th></tr>
       <tr><td>UE1 Réaliser un développement d'applications</td><td>13.56</td></tr>
@@ -74,7 +88,7 @@
       <tr><td>UE5 Gérer des données de l'information</td><td>12.35</td></tr>
       <tr><td>UE6 Collaborer au sein d'une équipe informatique</td><td>10.85</td></tr>
     </table>
-    
+
     <div class="confirmation">✔ Vous êtes déjà inscrit</div>
     <div class="footer">IUT Nord Franche‑Comté Belfort</div>
   </div>
